--- a/Grip/res/layout/activity_main.xml
+++ b/Grip/res/layout/activity_main.xml
@@ -1,21 +1,297 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:background="#FFFFFF" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="33dp"
-        android:text="Switch" />
+        <LinearLayout
+            android:id="@+id/width_left_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/background_left"
+            android:orientation="vertical" >
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv2"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/sound_key_margin"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv3"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv4"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv5"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv6"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv7"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv8"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv9"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv10"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/width_right_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/background_right"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/iv25"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv24"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv23"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/power_key_margin"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv22"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv21"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv20"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv19"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv18"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv17"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv16"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv15"
+                android:layout_width="@dimen/graph_land_width"
+                android:layout_height="@dimen/graph_land_height"
+                android:layout_marginTop="@dimen/graph_space_margin_2"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:id="@+id/height_top_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/graph_portrait_height"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/iv30"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+            
+            <ImageView
+                android:id="@+id/iv29"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/top_margin"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+            
+            <ImageView
+                android:id="@+id/iv28"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/graph_space_margin_1"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+            
+            <ImageView
+                android:id="@+id/iv27"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/graph_space_margin_1"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+            
+            <ImageView
+                android:id="@+id/iv26"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/graph_space_margin_1"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+            
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/height_bottom_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/graph_portrait_height"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/iv11"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv12"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/graph_space_margin_1"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv13"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/bottom_margin"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+
+            <ImageView
+                android:id="@+id/iv14"
+                android:layout_width="@dimen/graph_portrait_width"
+                android:layout_height="@dimen/graph_portrait_height"
+                android:layout_marginLeft="@dimen/graph_space_margin_1"
+                android:background="@color/graph_background"
+                android:scaleType="matrix" />
+        </LinearLayout>
+        
+        <Button 
+            android:id="@+id/grip_regist_ok"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:text="@string/common_register_ok"
+            android:layout_marginBottom="50dp"/>
+    </RelativeLayout>
+
+</FrameLayout>
