--- a/AssitantCam/DMCCam/res/layout/photo_view.xml
+++ b/AssitantCam/DMCCam/res/layout/photo_view.xml
@@ -69,7 +69,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/photo_view_infomation"
-        android:layout_below="@+id/photo_view_title_rl" />
+        android:layout_below="@+id/photo_view_title_rl" 
+        android:scaleType="centerInside"/>
 
     <LinearLayout
         android:id="@+id/photo_view_infomation"
@@ -93,7 +94,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#50000000" />
+            android:background="#50FFFFFF" />
 
         <LinearLayout
             android:id="@+id/photo_view_detail"
@@ -124,7 +125,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#50000000" />
+            android:background="#50FFFFFF" />
 
         <TextView
             android:id="@+id/photo_view_photolist"
