--- a/AssitantCam/DMCCam/res/layout/photo_view.xml
+++ b/AssitantCam/DMCCam/res/layout/photo_view.xml
@@ -69,8 +69,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/photo_view_infomation"
-        android:layout_below="@+id/photo_view_title_rl" 
-        android:scaleType="centerInside"/>
+        android:layout_below="@+id/photo_view_title_rl"
+        android:scaleType="fitCenter" />
 
     <LinearLayout
         android:id="@+id/photo_view_infomation"
@@ -78,16 +78,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:paddingLeft="46dp"
-        android:paddingRight="46dp" >
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp" >
 
         <TextView
             android:id="@+id/photo_view_photoname"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:text="2013년 7월 1일 월요일 15시 30분 역삼동 맑은날 "
             android:textColor="@drawable/custom_photo_view_name_text"
             android:textSize="14sp" />
 
@@ -105,6 +106,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center_vertical"
