[Grip] add Grip View mode. and new version (grip power_mode_all)

--- a/Grip/res/layout/setting.xml
+++ b/Grip/res/layout/setting.xml
@@ -93,5 +93,39 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#6e7172" />
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_setting_list_row_back"
+        android:padding="10dp" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical" 
+            android:layout_marginLeft="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/version_name"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/version_summary"
+                android:textColor="#8d9ca3" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#6e7172" />
 
 </LinearLayout>
